--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,12 @@
 }
 
 #root {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .container {
   max-width: 1000px;
-  margin: auto;
+  margin: 30px auto;
   display: flex;
   gap: 20px;
   padding-left: 20px;
@@ -29,17 +29,9 @@
   flex: 1;
 }
 
-.swiper {
-  width: 100%;
-  max-width: 400px; 
-  margin-inline: 0;
-}
-
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 500px;
-  object-fit: cover;
+.wrapper {
+  max-width: 1000px;
+  margin: 20px auto;
 }
 
 @media(max-width: 768px) {
@@ -49,29 +41,5 @@
 
   .container .col-1 {
     padding-right: 20px;
-  }
-
-  .swiper {
-    max-width: 500px;
-  }
-}
-
-@media(max-width: 576px) {
-  .swiper {
-    max-width: 600px;
-  }
-
-  .swiper-slide {
-    max-width: 400px;
-  }
-}
-
-@media(max-width: 420px) {
-  .swiper {
-    max-width: 500px;
-  }
-
-  .swiper-slide {
-    max-width: 300px;
   }
 }
