--- a/src/components/SliderTwo/styles.css
+++ b/src/components/SliderTwo/styles.css
@@ -51,6 +51,10 @@
                          " _ prev next";
   }
 
+  .mySwiper .swiper-slide:last-of-type {
+    margin-right: 10px;
+  }
+
   .main-slider-next {
     margin-right: 15px;
   }
